Fixed - width: max-content issue on iOS

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -25,6 +25,6 @@
   text-align: left;
   padding: 4px 8px;
   cursor: pointer;
-  width: max-content;
+  width: auto;
   min-width: 128px;
 }
